--- a/Road to Recovery/pages/about.html
+++ b/Road to Recovery/pages/about.html
@@ -136,7 +136,7 @@
                             showCancelButton: true,
                             cancelButtonText: "בטל",
                             confirmButtonClass: 'btn-warning',
-                            confirmButtonText: "מחק",
+                            confirmButtonText: "מחיקה",
                             closeOnConfirm: false
                         }, function () {
                             deactivateVolunteer(data[0], 'false');
