--- a/Road to Recovery/pages/menu.html
+++ b/Road to Recovery/pages/menu.html
@@ -78,6 +78,15 @@
                         <span>ניהול גרסאות אפליקציה</span>
                     </a>
                 </li>
+                <li>
+                    <!--<span>למנהל</span>-->
+                    <a href="https://docs.google.com/spreadsheets/d/1_2h2xZSR1XMpklUYMb5EinnJs7glEB6qfKy9kHZtOrs/edit?ts=5c7d5ebf#gid=0" class="waves-effect waves-primary">
+                        <i>
+                            <img src="../../Media/יומן מערכת.png" height="25" width="25" />
+                        </i>
+                        <span>Release notes</span>
+                    </a>
+                </li>
             </ul>
 
             <div class="clearfix"></div>
