--- a/Road to Recovery/pages/passwordForm.html
+++ b/Road to Recovery/pages/passwordForm.html
@@ -79,6 +79,9 @@
         * html .ui-autocomplete {
             height: 100px;
         }
+        input[type=text]:focus {
+            background-color: #FFE684;
+        }
     </style>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <!--City Autocomplete-->
@@ -92,8 +95,9 @@
         $(document).ready(function () {
             
             includeHTML();
+            var userDisplayName = GENERAL.USER.getUserDisplayName();
             var userName = GENERAL.USER.getUserName();
-            $("#userName").html(userName);
+            $("#userName").html(userDisplayName);
             //change ID from #patientFirstName"
             $("#username").val(userName);
             $("#username").attr('disabled', 'disabled');
@@ -171,7 +175,7 @@
                                    
                                         <div class="text-right m-b-30 m-r-15">
                                             <!--כפתור חזור, צריך לזכור את הדף הקודם שהיינו בו--> 
-                                            <button type="button" onclick="goBack()" class="btn btn-default waves-effect w-md m-b-5"><i class="ti-back-right m-r-5"></i>חזור</button>
+                                            <button type="button" onclick="goBack()" class="btn btn-default waves-effect w-md m-b-5"><i class="ti-back-right m-r-5"></i>חזרה</button>
                                         </div>
                                         <p class="required">* שדה חובה</p>
 
@@ -219,7 +223,7 @@
                                 </div>
                                 <div>
                                     <div class="text-right m-t-30 row">
-                                        <button type="submit" id="saveCustomer" class="btn btn-success waves-effect w-md waves-light m-b-5  m-r-15"><i class="ti-save m-r-5"></i>שמור</button>
+                                        <button type="submit" id="saveCustomer" class="btn btn-success waves-effect w-md waves-light m-b-5  m-r-15"><i class="ti-save m-r-5"></i>שמירה</button>
                                     </div>
                                 </div>
                                 <hr />
