--- a/Road to Recovery/pages/anonymousPatientForm.html
+++ b/Road to Recovery/pages/anonymousPatientForm.html
@@ -79,6 +79,9 @@
         * html .ui-autocomplete {
             height: 100px;
         }
+        input[type=text]:focus {
+            background-color: #FFE684;
+        }
     </style>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <!--City Autocomplete-->
@@ -94,7 +97,7 @@
         $(document).ready(function () {
             
             includeHTML();
-            var userName = GENERAL.USER.getUserName();
+            var userName = GENERAL.USER.getUserDisplayName();
             $("#userName").html(userName);
  
         });
@@ -385,7 +388,7 @@
                                             </div>
                                         </div>
                                         <div class="text-right m-b-30 m-r-15">
-                                            <button type="button" onclick="returnpatients()" class="btn btn-default waves-effect w-md m-b-5"><i class="ti-back-right m-r-5"></i>חזור</button>
+                                            <button type="button" onclick="returnpatients()" class="btn btn-default waves-effect w-md m-b-5"><i class="ti-back-right m-r-5"></i>חזרה</button>
                                         </div>
                                         <p class="required">* שדה חובה</p>
 
@@ -474,7 +477,7 @@
                                 </div>
                                 <div>
                                     <div class="text-right m-t-30 row">
-                                        <button type="submit" id="saveCustomer" class="btn btn-success waves-effect w-md waves-light m-b-5  m-r-15"><i class="ti-save m-r-5"></i>שמור</button>
+                                        <button type="submit" id="saveCustomer" class="btn btn-success waves-effect w-md waves-light m-b-5  m-r-15"><i class="ti-save m-r-5"></i>זמירה</button>
                                     </div>
                                 </div>
                                 <hr />
