--- a/Road to Recovery/pages/escortedForm.html
+++ b/Road to Recovery/pages/escortedForm.html
@@ -62,6 +62,9 @@
         * html .ui-autocomplete {
             height: 100px;
         }
+        input[type=text]:focus {
+            background-color: #FFE684;
+        }
     </style>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <!--City Autocomplete-->
@@ -242,7 +245,7 @@
         function loadPage() {
             //generate select options
             //generatePaymentType();
-            var userName = GENERAL.USER.getUserName();
+            var userName = GENERAL.USER.getUserDisplayName();
             $("#userName").html(userName);
 
             if (JSON.parse(GENERAL.ESCORTED.getEscortedList()).length != 0) {
@@ -442,7 +445,7 @@
                                             </div>
                                         </div>
                                         <div class="text-right m-b-30 m-r-15">
-                                            <button type="button" onclick="returnPatient()" class="btn btn-default waves-effect w-md m-b-5"><i class="ti-back-right m-r-5"></i>חזור</button>
+                                            <button type="button" onclick="returnPatient()" class="btn btn-default waves-effect w-md m-b-5"><i class="ti-back-right m-r-5"></i>חזרה</button>
                                         </div>
                                         <p class="required">* שדה חובה</p>
                                         <div class="row m-l-10 m-r-10">
@@ -559,7 +562,7 @@
                                             <!--<table id="jqGrid" class="table table-striped table-bordered text-right"></table>
                                             <div id="jqGridPager"></div>-->
                                             <div class="text-right m-t-30 row">
-                                                <button type="submit" id="saveCustomer" class="btn btn-success waves-effect w-md waves-light m-b-5  m-r-15"><i class="ti-save m-r-5"></i>שמור</button>
+                                                <button type="submit" id="saveCustomer" class="btn btn-success waves-effect w-md waves-light m-b-5  m-r-15"><i class="ti-save m-r-5"></i>שמירה</button>
                                             </div>
                                         </div>
                                     </div>
