--- a/Road to Recovery/pages/login.html
+++ b/Road to Recovery/pages/login.html
@@ -127,7 +127,7 @@
 
     </div>
     <div class="text-center">
-        תאריך עדכון אחרון: 04/12/2018 16:00
+        תאריך עדכון אחרון: 09/03/2019 21:42
     </div>
         <div class="row" id="footer">
             <div class="col-sm-4">
@@ -210,6 +210,7 @@
                                 setTimeout(function () {
                                     location.href = "manageRidePats.html";
                                 }, 1001);
+                                GetUserNameByCellphone(userName);
                                 GENERAL.USER.setUserName(userName);
                                // getUserType(userName);
                             }
@@ -240,7 +241,29 @@
                         required: "אנא הכנס סיסמא"
                     }
                 },
+
             });
+
+            function GetUserNameByCellphone(userName)
+            {
+                $.ajax({
+                    dataType: "json",
+                    url: "WebService.asmx/GetUserNameByCellphone",
+                    contentType: "application/json; charset=utf-8",
+                    type: "POST",
+                    async: false,
+                    data: JSON.stringify({ uName: userName}),
+                    success: function (data) {
+                        var userInDB = JSON.parse(data.d);
+                        if (userInDB != "") {
+                            GENERAL.USER.setUserDisplayName(userInDB);
+                        }
+                    },
+                    error: function (err) {
+                        alert("Error in finding user by cellphone: " + err.responseText);
+                    }
+                });
+            }
         });
 
 
