--- a/Road to Recovery/pages/versionForm.html
+++ b/Road to Recovery/pages/versionForm.html
@@ -92,7 +92,7 @@
         $(document).ready(function () {
 
             includeHTML();
-            var userName = GENERAL.USER.getUserName();
+            var userName = GENERAL.USER.getUserDisplayName();
             $("#userName").html(userName);
             //change ID from #patientFirstName"
             $("#username").val(userName);
@@ -167,7 +167,7 @@
 
                                         <div class="text-right m-b-30 m-r-15">
                                             <!--כפתור חזור, צריך לזכור את הדף הקודם שהיינו בו-->
-                                            <button type="button" onclick="goBack()" class="btn btn-default waves-effect w-md m-b-5"><i class="ti-back-right m-r-5"></i>חזור</button>
+                                            <button type="button" onclick="goBack()" class="btn btn-default waves-effect w-md m-b-5"><i class="ti-back-right m-r-5"></i>חזרה</button>
                                         </div>
                                         <p class="required">* שדה חובה</p>
 
@@ -248,7 +248,7 @@
                                 </div>
                                 <div>
                                     <div class="text-right m-t-30 row">
-                                        <button type="submit" id="saveCustomer" class="btn btn-success waves-effect w-md waves-light m-b-5  m-r-15"><i class="ti-save m-r-5"></i>שמור</button>
+                                        <button type="submit" id="saveCustomer" class="btn btn-success waves-effect w-md waves-light m-b-5  m-r-15"><i class="ti-save m-r-5"></i>שמירה</button>
                                     </div>
                                 </div>
                                 <hr />
