--- a/Road to Recovery/pages/viewPatient.html
+++ b/Road to Recovery/pages/viewPatient.html
@@ -37,13 +37,19 @@
         $(document).ready(function () {
 
             includeHTML();
-            var userName = GENERAL.USER.getUserName();
+            var userName = GENERAL.USER.getUserDisplayName();
             $("#userName").html(userName);
             //adds menu.html content into any "#menu" element
             //$('#menu').load('menu.html');
 
             //Create a DataTable from the Table
-            t = $('#datatable-buttons').DataTable();
+            t = $('#datatable-buttons').DataTable({
+                "autoWidth": true,
+                dom: 'Bfrtip',
+                buttons: [
+                    'excel'
+                ]
+            });
 
             refreshTable();
         });
@@ -55,7 +61,7 @@
             var active = $("#activePatient").prop('checked');
 
             t.clear().draw();
-
+            //messi = Date.now();
             $.ajax({
                 dataType: "json",
                 url: "WebService.asmx/getPatients",
@@ -63,6 +69,9 @@
                 type: "POST",
                 data: JSON.stringify({ active: active }),
                 success: function (data) {
+                    //messi2 = Date.now();
+                    //var timeDiff = messi2 - messi;
+                    //alert(timeDiff);
                     $('#wait').hide();
                     var arr_patients = JSON.parse(data.d);
                     //GENERAL.VOLUNTEERS.setvolunteersList(arr_volunteers);
@@ -105,14 +114,14 @@
                             var n = d.getFullYear();
                             var newDate = n - year[2];
                             if(newDate != 0){
-                                t.row.add([arr_patients[i].DisplayName, cellPhoneCheck, newDate, arr_patients[i].Barrier.Name, arr_patients[i].Hospital.Name, equip, btnStr]).draw(false); // arr_patients[i].BirthDate.substring(0,10),
+                                t.row.add([arr_patients[i].DisplayName, cellPhoneCheck, newDate, arr_patients[i].Barrier.Name, arr_patients[i].Hospital.Name, equip,arr_patients[i].Remarks, btnStr]).draw(false); // arr_patients[i].BirthDate.substring(0,10),
                             }
                             else {
-                                t.row.add([arr_patients[i].DisplayName, cellPhoneCheck, "", arr_patients[i].Barrier.Name, arr_patients[i].Hospital.Name, equip, btnStr]).draw(false); // arr_patients[i].BirthDate.substring(0,10),
+                                t.row.add([arr_patients[i].DisplayName, cellPhoneCheck, "", arr_patients[i].Barrier.Name, arr_patients[i].Hospital.Name, equip,arr_patients[i].Remarks, btnStr]).draw(false); // arr_patients[i].BirthDate.substring(0,10),
                             }
                         }
                         else {
-                            t.row.add([arr_patients[i].DisplayName, cellPhoneCheck, "", arr_patients[i].Barrier.Name, arr_patients[i].Hospital.Name, equip, btnStr]).draw(false); // arr_patients[i].BirthDate.substring(0,10),
+                            t.row.add([arr_patients[i].DisplayName, cellPhoneCheck, "", arr_patients[i].Barrier.Name, arr_patients[i].Hospital.Name, equip,arr_patients[i].Remarks, btnStr]).draw(false); // arr_patients[i].BirthDate.substring(0,10),
                         }
 
                     }
@@ -146,7 +155,7 @@
                             showCancelButton: true,
                             cancelButtonText: "בטל",
                             confirmButtonClass: 'btn-warning',
-                            confirmButtonText: "מחק",
+                            confirmButtonText: "מחיקה",
                             closeOnConfirm: false
                         }, function () {
                             SetPatientStatus(data[0], 'false');
@@ -322,8 +331,8 @@
                                             <th>גיל</th>
                                             <th>מחסום</th>
                                             <th>בית חולים</th>
-                                            <!--<th>תאריך לידה</th>-->
                                             <th>ציוד נלווה</th>
+                                            <th>הערות</th>
                                             <th>פעולות</th>
                                         </tr>
                                     </thead>
