--- a/Road to Recovery/pages/viewPatient - Copy.html
+++ b/Road to Recovery/pages/viewPatient - Copy.html
@@ -78,11 +78,12 @@
 
                     for (i in arr_patients) {
                         var equip = "";
-                        for (j in arr_patients[i].Equipment) {
+                        for (j in arr_patients[i].Equipment)
+                        {
                             equip += arr_patients[i].Equipment[j] + ", ";
                         }
                         equip = equip.substring(0, equip.length - 2);
-                        if (arr_patients[i].Equipment.length == 0) equip = "אין";
+                        if (arr_patients[i].Equipment.length==0) equip = "אין";
                         var btnStr = "";
                         //כפתור צפייה כרגע מוסתר
                         //var showBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-success btn-sm m-b-5' id='show' title='צפייה'><i class='fa fa-wpforms'></i></button>";
@@ -98,13 +99,13 @@
                             var deleteBtn = "<button type='button' class='btn btn-icon waves-effect waves-light btn-danger btn-sm m-b-5' id='remove' title='מחיקה'><i class='fa fa-remove' ></i></button>";
                             btnStr += " " + deleteBtn;
                         }
-
+                        
                         //if this is an anonymous patient than cellphone number not relevent.
                         var cellPhoneCheck = arr_patients[i].CellPhone;
-                        if (cellPhoneCheck.indexOf(":") != -1) {
+                        if(cellPhoneCheck.indexOf(":") != -1){
                             cellPhoneCheck = "";
                         }
-
+                        
                         //var myDate = arr_patients[i].BirthDate.replace('/Date(', '');
                         if (arr_patients[i].BirthDate != "") {
                             var bDate = arr_patients[i].BirthDate.split(" ");
@@ -112,15 +113,15 @@
                             var d = new Date();
                             var n = d.getFullYear();
                             var newDate = n - year[2];
-                            if (newDate != 0) {
-                                t.row.add([arr_patients[i].DisplayName, cellPhoneCheck, newDate, arr_patients[i].Barrier.Name, arr_patients[i].Hospital.Name, equip, arr_patients[i].Remarks, btnStr]).draw(false); // arr_patients[i].BirthDate.substring(0,10),
+                            if(newDate != 0){
+                                t.row.add([arr_patients[i].DisplayName, cellPhoneCheck, newDate, arr_patients[i].Barrier.Name, arr_patients[i].Hospital.Name, equip,arr_patients[i].Remarks, btnStr]).draw(false); // arr_patients[i].BirthDate.substring(0,10),
                             }
                             else {
-                                t.row.add([arr_patients[i].DisplayName, cellPhoneCheck, "", arr_patients[i].Barrier.Name, arr_patients[i].Hospital.Name, equip, arr_patients[i].Remarks, btnStr]).draw(false); // arr_patients[i].BirthDate.substring(0,10),
+                                t.row.add([arr_patients[i].DisplayName, cellPhoneCheck, "", arr_patients[i].Barrier.Name, arr_patients[i].Hospital.Name, equip,arr_patients[i].Remarks, btnStr]).draw(false); // arr_patients[i].BirthDate.substring(0,10),
                             }
                         }
                         else {
-                            t.row.add([arr_patients[i].DisplayName, cellPhoneCheck, "", arr_patients[i].Barrier.Name, arr_patients[i].Hospital.Name, equip, arr_patients[i].Remarks, btnStr]).draw(false); // arr_patients[i].BirthDate.substring(0,10),
+                            t.row.add([arr_patients[i].DisplayName, cellPhoneCheck, "", arr_patients[i].Barrier.Name, arr_patients[i].Hospital.Name, equip,arr_patients[i].Remarks, btnStr]).draw(false); // arr_patients[i].BirthDate.substring(0,10),
                         }
 
                     }
@@ -131,7 +132,7 @@
                         var data = t.row($(this).parents('tr')).data();
                         arr_details = { displayName: data[0], func: "edit" };
                         GENERAL.PATIENTS.setPatientsList(JSON.stringify(arr_details));
-                        if (data[0].indexOf("אנונימי") != -1) {
+                        if (data[0].indexOf("אנונימי")!=-1) {
                             location.href = "anonymousPatientForm.html";
                         }
                         else location.href = "patientForm.html";
@@ -150,7 +151,7 @@
                         swal({
                             title: "האם אתם בטוחים?",
                             type: "warning",
-                            text: "מחיקת החולה " + data[0],
+                            text: "מחיקת החולה "+data[0],
                             showCancelButton: true,
                             cancelButtonText: "בטל",
                             confirmButtonClass: 'btn-warning',
@@ -173,7 +174,7 @@
                         swal({
                             title: "האם אתם בטוחים?",
                             type: "warning",
-                            text: "שחזור החולה " + data[0],
+                            text: "שחזור החולה "+data[0],
                             showCancelButton: true,
                             cancelButtonText: "בטל",
                             confirmButtonClass: 'btn-warning',
@@ -208,7 +209,7 @@
                 type: "POST",
                 data: JSON.stringify({ displayName: displayName, active: active }),
                 success: function (data) { },
-                error: function (err) { alert("Error in SetPatientStatus: " + err.responseText); }
+                error: function (err) { alert("Error in SetPatientStatus: "+err.responseText); }
             });
 
         }
@@ -258,9 +259,9 @@
                         </div>
                         <!--Search-->
                         <!--<form role="search" class="navbar-right app-search pull-right hidden-xs">
-                            <input type="text" placeholder="חיפוש..." class="form-control app-search-input">
-                            <a href=""><i class="fa fa-search"></i></a>
-                        </form>-->
+        <input type="text" placeholder="חיפוש..." class="form-control app-search-input">
+        <a href=""><i class="fa fa-search"></i></a>
+    </form>-->
                     </div>
                     <!--/.nav-collapse -->
                 </div>
@@ -298,19 +299,19 @@
                         <div class="col-sm-12">
                             <div class="card-box table-responsive">
                                 <!--<div class="row">
-                                    <div class="col-sm-8">
-                                        <h4 class="m-t-0 header-title"><b>טבלת חולים</b></h4>
-                                        <p class="text-muted font-13 m-b-30">
-                                            מבט כללי על החולים שבוצעו, ניתן לצפות בפרטים נוספים בלחיצה על כפתור ההרחבה.
-                                        </p>
-                                    </div>
-                                    <div class="col-sm-4 text-right">
-                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-success btn-sm m-b-5' id='show' title='צפייה'><i class='fa fa-wpforms'></i></button> צפייה
-                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-primary btn-sm m-b-5' id='edit' title='עריכה'><i class='ti-pencil'></i></button> ערכיה
-                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-danger btn-sm m-b-5' id='remove' title='מחיקה'><i class='fa fa-remove'></i></button> מחיקה
-                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-warning btn-sm m-b-5' id='reactive' title='שחזור'><i class='fa fa-undo'></i></button> שחזור
-                                    </div>
-                                </div>-->
+        <div class="col-sm-8">
+            <h4 class="m-t-0 header-title"><b>טבלת חולים</b></h4>
+            <p class="text-muted font-13 m-b-30">
+                מבט כללי על החולים שבוצעו, ניתן לצפות בפרטים נוספים בלחיצה על כפתור ההרחבה.
+            </p>
+        </div>
+        <div class="col-sm-4 text-right">
+            <button type='button' class='btn btn-icon waves-effect waves-light btn-success btn-sm m-b-5' id='show' title='צפייה'><i class='fa fa-wpforms'></i></button> צפייה
+            <button type='button' class='btn btn-icon waves-effect waves-light btn-primary btn-sm m-b-5' id='edit' title='עריכה'><i class='ti-pencil'></i></button> ערכיה
+            <button type='button' class='btn btn-icon waves-effect waves-light btn-danger btn-sm m-b-5' id='remove' title='מחיקה'><i class='fa fa-remove'></i></button> מחיקה
+            <button type='button' class='btn btn-icon waves-effect waves-light btn-warning btn-sm m-b-5' id='reactive' title='שחזור'><i class='fa fa-undo'></i></button> שחזור
+        </div>
+    </div>-->
                                 <div class="row">
                                     <div class="col-sm-3 checkbox checkbox-primary text-left">
                                         <input id="activePatient" type="checkbox" onchange="refreshTable()" checked>
